--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div name="main">
                 <div class="form-container">
                     <div class="form-container_name">
-                        <input type="text" id="user_name" name="userName" placeholder="Name">
+                        <input type="text" id="user_name" name="userName" placeholder="Name" autocomplete="none">
                         <span></span>
                     </div>
                     <div class="form-container_pass ">
@@ -44,7 +44,7 @@
                     </div>
                     <div class="form-container_agreement">
                         <input type="checkbox" name="UserTerms" id="user_terms">
-                        <label for="user_terms">Accept <a href="#">terms</a> and <a href="#">conditions</a></label>
+                        <label for="user_terms" id="user_terms__label">Accept <a href="#">terms</a> and <a href="#">conditions</a></label>
                     </div>
                     <div class="form-container_sign-in">
                         <input type="submit" id="form_button" value="Sign Up">
