--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div name="main">
                 <div class="form-container">
                     <div class="form-container_name">
-                        <input type="text" id="user_name" name="userName" placeholder="Name" autocomplete="none">
-                        <span></span>
+                        <input type="text" id="user_name" name="userName" placeholder="Name" autocomplete="off">
+                        
                     </div>
                     <div class="form-container_pass ">
                         <input type="password" name="userPass" id="user_pass" placeholder="Password" >
