changet submit button from input tag to button

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         <label for="user_terms" id="user_terms__label">Accept <a href="#">terms</a> and <a href="#">conditions</a></label>
                     </div>
                     <div class="form-container_sign-in">
-                        <input type="submit" id="form_button" value="Sign Up">
-                        <label for="button"></label>
+                        <button type="button" id="form_button">Sign Up</button>
                     </div>
                 </div>
             </div>
