added country field generation  into formObbjConstructor

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                         </select>
                     </div>
                     <div class="form-container_gender" >
-                        <input type="radio" name="UserGender" id="user_gender-male" checked>
+                        <input type="radio" name="UserGender" id="user_gender-male" value="male" checked>
                         <label for="gender">Male</label>
-                        <input type="radio" name="UserGender" id="user_gender-female">
+                        <input type="radio" name="UserGender" id="user_gender-female" value="female">
                         <label for="gender">Female</label>
                     </div>
                     <div class="form-container_agreement">
